--- a/public/utility-vs-solar-battery.html
+++ b/public/utility-vs-solar-battery.html
@@ -28,7 +28,7 @@
     <div class="p-4 sm:p-6 lg:p-8">
       <div class="max-w-7xl mx-auto">
         <header class="mb-8 text-center">
-          <h1 class="text-4xl md:text-5xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-green-400 to-blue-500">
+          <h1 class="text-4xl md:text-5xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-green-400 to-blue-500" style="line-height: 1.3;">
             Utility vs. Solar + Battery: A Cost Analysis
           </h1>
           <p class="mt-2 text-lg text-gray-400">An interactive calculator to compare the long-term costs</p>
