feat: Add Solar Battery Cost Analysis project

--- a/public/projects.html
+++ b/public/projects.html
@@ -608,6 +608,7 @@
             These projects showcase my expertise in developer platforms, embedded systems, and creative technology
             solutions.</p>
         </div>
+        <a class="toc" href="#utility-vs-solar-battery">Utility vs. Solar + Battery</a>
         <a class="toc" href="#android-build-time">Android Build Time</a>
         <a class="toc" href="#google-tv">Google TV App Ecosystem</a>
         <a class="toc" href="#android-auto">Android Auto Apps</a>
@@ -627,6 +628,15 @@
         <a class="toc" href="#portfolio">Portfolio Website</a>
         <a class="toc" href="#global-temperature-visualization">Global Temperature Visualization</a>
         <div class="section-header">
+        </div>
+        <div class="card" id="utility-vs-solar-battery">
+          <div class="image-gradient-container">
+            <img src="/i/solar-battery-cost.png" alt="Utility vs. Solar + Battery Cost Analysis" loading="lazy">
+          </div>
+          <h2>Utility vs. Solar + Battery</h2>
+          <p>An interactive calculator to compare the long-term costs of utility power vs. a solar and battery system. This tool helps you make an informed decision by modeling the costs over a 30-year period, including opportunity costs and other financial assumptions.</p>
+          <a href="/utility-vs-solar-battery.html" class="project-link">Calculator</a>
+          <div class="tags">Financial Modeling, Cost Analysis, Sustainable Technology, Web Development</div>
         </div>
         <div class="card" id="android-build-time">
           <div class="image-gradient-container">
