--- a/public/playground/card-layout.html
+++ b/public/playground/card-layout.html
@@ -11,8 +11,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
 :root {
-  --color: #000000;
-  --background-color:   #eeeeee;
+  --color: #000;
+  --background-color:   #eee;
 }
 
 body {
@@ -33,7 +33,7 @@ body {
   width: 100%;
   box-sizing: border-box;
   flex-direction: column;
-  font-family: 'Roboto', sans-serif; 
+  font-family: Roboto, sans-serif; 
   font-size: 18px;
   color: var(--color);
   padding-bottom: 16px;
@@ -45,7 +45,7 @@ body {
   border-radius: 8px;
   object-fit: cover;
   display: block;
-  margin: 0 auto 0px auto; 
+  margin: 0 auto; 
 }
 
 .card h2 {
@@ -54,13 +54,13 @@ body {
 }
 
 .card p {
-  margin-top: 0px;
+  margin-top: 0;
   margin-bottom: 12px;
 }
 
 .card a { 
   display: inline-block;
-  padding: 16px 16px;
+  padding: 16px;
   color: #808080;
   text-decoration: none;
   border: 1px solid #808080;
@@ -69,10 +69,11 @@ body {
   text-transform: uppercase;
 }
 
-@media (max-width: 300px) {
+@media (width <= 300px) {
   .container {
     grid-template-columns: 1fr;
   }
+
   .card {
     aspect-ratio: 0;
     height: auto;
