--- a/public/playground/paragraph-image.html
+++ b/public/playground/paragraph-image.html
@@ -5,13 +5,13 @@
 -->
 <html lang="en">
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-<title>Responsive Paragraph and Image</title> 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Responsive Paragraph and Image</title>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
 :root {
-  --color: #ffffff;
+  --color: #fff;
   --background-color: #263551;
 }
 
@@ -21,34 +21,34 @@ body {
 
 .container {
   display: flex;
-  flex-direction: column; 
-  align-items: center; 
+  flex-direction: column;
+  align-items: center;
   max-width: 1200px;
   margin: 0 auto;
-  justify-content: center; 
-  font-family: 'Roboto', sans-serif;
+  justify-content: center;
+  font-family: Roboto, sans-serif;
   font-size: 18px;
   color: var(--color);
   padding: 8px;
 }
 
 .hero {
-  box-sizing: border-box; 
-  display: flex; 
-  flex-direction: column; 
-  justify-content: center; 
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .container img {
-  max-width: 100%; 
-  height: auto; 
+  max-width: 100%;
+  height: auto;
   object-fit: contain;
   border-radius: 4px;
 }
 
 #text-div {
-  text-align: left; 
-  margin-top: 0px;
+  text-align: left;
+  margin-top: 0;
 }
 
 #text-div h1 {
@@ -58,8 +58,8 @@ body {
 }
 
 #text-div p {
-  margin-top: 0px;
-  margin-bottom: 0px;
+  margin-top: 0;
+  margin-bottom: 0;
   min-height: 148px;
 }
 
@@ -68,20 +68,24 @@ body {
   width: 16px;
 }
 
-@media (min-width: 600px) {
+@media (width >= 600px) {
   .container {
     flex-direction: row;
   }
+
   .hero {
     width: 50%;
   }
-  #image-div { 
+
+  #image-div {
     height: 100%;
     padding-inline: 4px;
   }
+
   #text-div {
     padding-inline: 4px;
   }
+
   .container img {
     height: 100%;
     object-fit: cover;
@@ -103,13 +107,13 @@ body {
 </div>
 
 <script>
-  function adjustImageDivHeight() {
+  function adjustImageDivHeight () {
     const textDiv = document.getElementById('text-div');
     const imageDiv = document.getElementById('image-div');
-    if (window.innerWidth >= 600) { 
+    if (window.innerWidth >= 600) {
       imageDiv.style.height = textDiv.offsetHeight + 'px';
     } else {
-      imageDiv.style.height = 'auto'; 
+      imageDiv.style.height = 'auto';
     }
   }
 
